# jjay

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: error.rs  eval.rs  grammar.pest  lib.rs
src/ast/: helpers.rs  mod.rs  node_macro.rs  nodes.rs
src/eval/: func.rs  mod.rs  scope.rs  value.rs
src/scope/: mod.rs  stdlib.rs
src/value/: func.rs  mod.rs
tests/: json.rs  tests.rs
tests/common/: mod.rs
