[package]
name = "jjay"
version = "0.1.1"
authors = ["Fredrik Østrem <frx.apps@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[features]
default = []
n-tests = []
i-tests = []

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = "1.0.114"
serde_json = "1.0.55"
structopt = "0.3.15"

[dev-dependencies]
paste = "0.1.18"
cfg-if = "0.1.10"
float-cmp = "0.8.0"
